--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Pigeon App</title>
+    <script src="https://static.tildacdn.com/js/jquery-1.10.2.min.js"></script>
+    <script src="https://static.tildacdn.com/js/tilda-scripts-3.0.min.js"></script>
+    <script src="https://project6526443.tilda.ws/tilda-blocks-page32636306.min.js"></script>
+    <script src="https://static.tildacdn.com/js/lazyload-1.3.min.js"></script>
+    <script src="https://static.tildacdn.com/js/tilda-zero-1.1.min.js"></script>
+    <script src="https://static.tildacdn.com/js/tilda-cards-1.0.min.js"></script>
+    <script src="https://static.tildacdn.com/js/tilda-menu-1.0.min.js"></script>
+    <script src="https://static.tildacdn.com/js/tilda-zero-scale-1.0.min.js"></script>
+    <script src="https://static.tildacdn.com/js/tilda-skiplink-1.0.min.js"></script>
+    <script src="https://static.tildacdn.com/js/tilda-events-1.0.min.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
