--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,11 @@
     <script src="https://static.tildacdn.com/js/jquery-1.10.2.min.js"></script>
     <script src="https://static.tildacdn.com/js/tilda-scripts-3.0.min.js"></script>
     <script src="https://project6526443.tilda.ws/tilda-blocks-page32636306.min.js"></script>
-    <script src="https://static.tildacdn.com/js/lazyload-1.3.min.js"></script>
-    <script src="https://static.tildacdn.com/js/tilda-zero-1.1.min.js"></script>
+    <script src="https://static.tildacdn.com/js/tilda-lazyload-1.0.min.js"></script>
+    <script src="https://static.tildacdn.com/js/tilda-cover-1.0.min.js"></script>
     <script src="https://static.tildacdn.com/js/tilda-cards-1.0.min.js"></script>
     <script src="https://static.tildacdn.com/js/tilda-menu-1.0.min.js"></script>
+    <script src="https://static.tildacdn.com/js/tilda-zero-1.1.min.js"></script>
     <script src="https://static.tildacdn.com/js/tilda-zero-scale-1.0.min.js"></script>
     <script src="https://static.tildacdn.com/js/tilda-skiplink-1.0.min.js"></script>
     <script src="https://static.tildacdn.com/js/tilda-events-1.0.min.js"></script>
